--- a/adc.html
+++ b/adc.html
@@ -42,7 +42,7 @@
         <nav class="navbar nav-menu fixed-top">
             <div class="container-fluid cont-logo-btn">
                 <a href="Index.html">
-                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de League of Legends">
+                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de lolguides">
                 </a>
                 <div class="cont-boton-responsive">
                     <button class="boton-novisible" type="button" data-bs-toggle="offcanvas"
@@ -58,7 +58,9 @@
             <div class="offcanvas offcanvas-end fondo-menu" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title lolguide" id="offcanvasNavbarLabel">Lolguides</h5>
+                    <div class="cont-logo-menu-resp">
+                        <img class="logo-menu-resp" src="./imgs/logo.png" alt="logo de lolguides">
+                    </div>
                     <button type="button" class="btn-close text-reset boton-cerrar" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
@@ -313,12 +315,12 @@
                 </li>
 
                 <li>
-                    <i class="fab fa-instagram icono-footer"></i> <a
-                        href="https://www.instagram.com/matiassorgetti/">Instagram</a>
+                    <a href="https://www.instagram.com/matiassorgetti/"><i
+                            class="fab fa-instagram icono-footer"></i>Instagram</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-facebook-square icono-footer"></i> <a href="error404.html">facebook</a>
+                    <a href="error404.html"><i class="fab fa-facebook-square icono-footer"></i>facebook</a>
                 </li>
             </ul>
 
@@ -328,11 +330,11 @@
                 </li>
 
                 <li>
-                    <i class="fab fa-twitch icono-footer"></i> <a href="error404.html">Twitch</a>
+                    <a href="error404.html"><i class="fab fa-twitch icono-footer"></i>Twitch</a>
                 </li>
 
                 <li>
-                    <i class="fab fa-youtube-square icono-footer"></i> <a href="error404.html">Youtube</a>
+                    <a href="error404.html"><i class="fab fa-youtube-square icono-footer"></i>Youtube</a>
                 </li>
             </ul>
         </div>
