agrege media queries

--- a/conoceme.html
+++ b/conoceme.html
@@ -171,7 +171,7 @@
                     <p>
                         La cuenta en la que estoy jugando actualmente es:
                         <a class="opgg"
-                            href="https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo">https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo</a>
+                            href="https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo">op.gg</a>
                     </p>
                     <h2>Mis redes</h2>
                 </div>
