saque las animaciones a los textos

--- a/Index.html
+++ b/Index.html
@@ -102,11 +102,9 @@
         <!-- inicio del contenido principal -->
 
         <section class="section">
-            <div class="section__cont-textos wow animate__animated animate__fadeInLeftBig">
+            <div class="section__cont-textos">
                 <h2>¿Qué es League of Legends?</h2>
-                <div>
-                    <img src="./imgs/imgenes-index/img-lol.png" alt="foto de campeones del lol">
-                </div>
+                <img src="./imgs/imgenes-index/img-lol.png" alt="foto de campeones del lol">
                 <p>
                     League of legends es un MOBA de alta competitividad y uno de los deportes electrónicos más populares
                     hasta el momento.
@@ -116,11 +114,9 @@
                     Si les interesa saber más acerca de este deporte electrónico, les recomiendo que se vean mi guía.
                 </p>
             </div>
-            <div class="section__cont-textos wow animate__animated animate__fadeInRightBig">
+            <div class="section__cont-textos">
                 <h2>¿En qué consiste mi guía?</h2>
-                <div>
-                    <img src="./imgs/imgenes-index/foto-victoria.png" alt="foto de cartel de victoria del lol">
-                </div>
+                <img src="./imgs/imgenes-index/foto-victoria.png" alt="foto de cartel de victoria del lol">
                 <p>
                     En esta página web me voy a tomar el tiempo de enseñar y ayudar a mejorar
                     a todos aquellos jugadores que recién están comenzado a jugar al lol o quieran hacerlo, y también
