--- a/adc.html
+++ b/adc.html
@@ -157,7 +157,7 @@
 
             <!-- contenido principal -->
             <div class="section-guiaAdc__cont-texto">
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h2>Kiteo</h2>
                     <img src="./imgs/imagenes-AdcGuide/kiteo.png"
                         alt="background de dos campeones y encima un texto que dice guía de kiteo">
@@ -170,7 +170,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3 id="kiteo-utilidad">¿Para qué sirve?</h3>
                     <p>
                         Sirve para que sea más dificil que el enemigo logre alcanzarte, ya sea con ataques básicos (si
@@ -182,7 +182,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h3 id="kiteo-config">Configuración de kiteo</h3>
                     <p>
                         En el siguiente video voy a mostrar como configurar las teclas para poder kitear de la manera
@@ -191,7 +191,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3 id="practicar-kiteo">Practicar el kiteo</h3>
                     <p>
                         En el siguiente video voy a mostrar como practicar el kiteo, para que puedas llevarlo a tus
@@ -201,7 +201,7 @@
             </div>
 
             <div class="section-guiaAdc__cont-texto">
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h2>Tipos de adc</h2>
                     <img src="./imgs/imagenes-AdcGuide/tipos-de-Adc.png"
                         alt="background de dos campeones y encima un texto que dice diferentes tipos de adc">
@@ -212,7 +212,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3 id="adc-utilidad">Utilidad</h3>
                     <p>
                         La función de este tipo de adc es ser útiles para el equipo, como indica su nombre, ya que
@@ -226,7 +226,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h3 id="adc-hipercarry">Hipercarrys</h3>
                     <p>
                         Este tipo de adc suele brillar en el juego tardio y si se feedean pueden carrear la partida
@@ -236,7 +236,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3 id="adc-caster">adc casters</h3>
                     <p>
                         Este tipo de adc dependen principalmente de sus habilidades para meter la mayor cantidad de
@@ -248,7 +248,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h3 id="adc-asedio">adc de asedio</h3>
                     <p>
                         Este tipo de adc son campeones que tienen muchisima limpieza de oleadas y usan sus ataques
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="section-guiaAdc__cont-texto wow animate__animated animate__fadeInRightBig">
+            <div class="section-guiaAdc__cont-texto">
                 <h2>Micro game como adc</h2>
                 <div id="posicionamiento">
                     <h3>Posicionamiento</h3>
@@ -280,7 +280,7 @@
                 </div>
             </div>
 
-            <div class="section-guiaAdc__cont-texto wow animate__animated animate__fadeInLeftBig">
+            <div class="section-guiaAdc__cont-texto">
                 <h2>Macro game como adc</h2>
                 <div id="itemizacion">
                     <h3>Itemización</h3>
