--- a/avanzado.html
+++ b/avanzado.html
@@ -151,7 +151,7 @@
             <!-- explicacion sobre microgame -->
             <!-- este div es para los trades -->
             <div class="section2-avanzado__cont-textos">
-                <div id="micro-game" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="micro-game">
                     <h2>Micro juego</h2>
                     <h3>¿Qué es el micro game?</h3>
                     <p>
@@ -162,7 +162,7 @@
                     </p>
                 </div>
 
-                <div id="trades" class="wow animate__animated animate__fadeInRightBig">
+                <div id="trades">
                     <h3>Tradeos</h3>
                     <img src="./imgs/imagenes-avanzado/trades.png" alt="dos campeones pegandose en la mid lane">
                     <p>
@@ -190,7 +190,7 @@
                 </div>
 
                 <!-- este div es para la tienda -->
-                <div id="objetos" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="objetos">
                     <h3>Objetos</h3>
                     <img src="./imgs/imagenes-avanzado/tienda.png" alt="Tienda de objetos del lol">
                     <p>
@@ -206,7 +206,7 @@
                 </div>
 
                 <!-- este div es para las runas -->
-                <div id="runas" class="wow animate__animated animate__fadeInRightBig">
+                <div id="runas">
                     <h3>Runas</h3>
                     <img src="./imgs/imagenes-avanzado/runes.png" alt="página de runas">
                     <p>
@@ -218,7 +218,7 @@
                 </div>
 
                 <!-- este div es para el farm -->
-                <div id="farm" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="farm">
                     <h3>Farmeo</h3>
                     <img src="./imgs/imagenes-avanzado/farm.png" alt="un campeón a punto de last hitear los súbditos">
                     <p>
@@ -243,7 +243,7 @@
             <!-- explicacion sobre macrogame -->
             <div class="section2-avanzado__cont-textos">
 
-                <div id="macro-game" class="wow animate__animated animate__fadeInRightBig">
+                <div id="macro-game">
                     <h2>macro juego</h2>
                     <h3>¿Qué es el macro game?</h3>
                     <p>
@@ -254,7 +254,7 @@
                 </div>
 
                 <!-- explicacion del tempo -->
-                <div id="tempo" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="tempo">
                     <h3>Tempo</h3>
                     <p>
                         El tempo es algo dificil de definir, pero es algo así como los factores que determinan que
@@ -268,7 +268,7 @@
                 </div>
 
                 <!-- explicacion de como manejar las oleadas -->
-                <div id="oleadas" class="wow animate__animated animate__fadeInRightBig">
+                <div id="oleadas">
                     <h3>Control de oleadas</h3>
                     <p>
                         El control de oleadas es algo fundamental, ya que con este se puede sacar muchísima ventaja
@@ -285,7 +285,7 @@
                 </div>
 
                 <!-- explicacion de que pasa al tirar estructuras -->
-                <div id="estructuras" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="estructuras">
                     <h3>Estructuras</h3>
                     <p>
                         Toda acción en el lol tiene consecuencias, tanto positivas como negativas, y tirar una
@@ -295,7 +295,7 @@
                 </div>
 
                 <!-- explicación de como wardear -->
-                <div id="vision" class="wow animate__animated animate__fadeInRightBig">
+                <div id="vision">
                     <h3>Visión</h3>
                     <p>
                         La visión es un factor muy importante, no solo a la hora de evitar gankeos, sino que también
@@ -322,7 +322,7 @@
             <!-- la importancia de la mentalidad -->
             <div class="section2-avanzado__cont-textos">
 
-                <div id="mental" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="mental">
                     <h2>Mentalidad</h2>
                     <p>
                         Lo primero que hay que tener en cuenta a la hora de hablar de la mentalidad, es que el lol es un
@@ -350,7 +350,7 @@
                     </p>
                 </div>
 
-                <div id="autocritica" class="wow animate__animated animate__fadeInRightBig">
+                <div id="autocritica">
                     <h3>Autocrítica</h3>
                     <p>
                         Para que un jugador pueda mejorar es fundamental que sea autocrítico y entienda que si bien no
@@ -365,7 +365,7 @@
                     </p>
                 </div>
 
-                <div id="concentracion" class="wow animate__animated animate__fadeInLeftBig">
+                <div id="concentracion">
                     <h3>concentración</h3>
                     <p>
                         El League of Legends es un juego que demanda muchísima concentración, es decir que mientras
