--- a/conoceme.html
+++ b/conoceme.html
@@ -98,7 +98,7 @@
         <!-- contenido principal de conoceme -->
         <section class="section-conoceme">
             <div class="section-conoceme__cont-texto">
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h2>¿Quién soy?</h2>
                     <p>
                         Soy Zairos, un jugador amateur de League of Legends, juego en el servidor de Latino América
@@ -106,7 +106,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3>¿Por que creé esta página web?</h3>
                     <p>
                         Decidí crear esta página porque el League of Legends es un juego extremadamente dificil y siento
@@ -117,7 +117,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInLeftBig">
+                <div>
                     <h3>Campeones favoritos</h3>
                     <!-- carrusel de bootstrap -->
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -166,7 +166,7 @@
                     </p>
                 </div>
 
-                <div class="wow animate__animated animate__fadeInRightBig">
+                <div>
                     <h3>Cuenta de lol</h3>
                     <p>
                         La cuenta en la que estoy jugando actualmente es:
@@ -177,7 +177,7 @@
                 </div>
 
 
-                <div class="cont-ul-conoceme wow animate__animated animate__fadeInLeftBig">
+                <div class="cont-ul-conoceme">
                     <ul>
                         <li>
                             <a href="https://www.instagram.com/matiassorgetti/">
