hice responsive los bg image

--- a/conoceme.html
+++ b/conoceme.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div>
-                    <h3>¿Por que creé esta página web?</h3>
+                    <h3>¿Por qué creé esta página web?</h3>
                     <p>
                         Decidí crear esta página porque el League of Legends es un juego extremadamente dificil y siento
                         que
