--- a/error404.html
+++ b/error404.html
@@ -19,6 +19,7 @@
 
 <body>
     <div class="cont-error">
+
         <img src="./imgs/img-error404.png" alt="" class="teemo">
         <h1>
             Error 404
@@ -27,9 +28,10 @@
             Ups...Teemo plantó un hongo
             <br>
             y arruinó la página. <br>
-            Está sección no se encuentra habilitada.    
+            Esta sección no se encuentra habilitada.
         </p>
-        <a href="index.html" class="btn-error">El tamaño no lo es todo</a>    
+        <a href="index.html" class="btn-error">El tamaño no lo es todo</a>
     </div>
 </body>
+
 </html>
