--- a/conoceme.html
+++ b/conoceme.html
@@ -171,7 +171,7 @@
                     <p>
                         La cuenta en la que estoy jugando actualmente es:
                         <a class="opgg"
-                            href="https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo">op.gg</a>
+                            href="https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo"><br> https://las.op.gg/summoner/userName=sh%C3%ADnichi+kudo</a>
                     </p>
                     <h2>Mis redes</h2>
                 </div>
@@ -262,8 +262,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-    <script src="./js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 </body>
